deployment/k8s/argocd-yml-demo-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: argocd-yml-demo
    provider: jkube
    version: 0.0.1-SNAPSHOT
    group: com.example
    app.kubernetes.io/part-of: com.example
    app.kubernetes.io/managed-by: jkube
    app.kubernetes.io/name: argocd-yml-demo
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  name: argocd-yml-demo
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: argocd-yml-demo
      provider: jkube
      group: com.example
      app.kubernetes.io/name: argocd-yml-demo
      app.kubernetes.io/part-of: com.example
      app.kubernetes.io/managed-by: jkube
  template:
    metadata:
      labels:
        app: argocd-yml-demo
        provider: jkube
        version: 0.0.1-SNAPSHOT
        group: com.example
        app.kubernetes.io/part-of: com.example
        app.kubernetes.io/managed-by: jkube
        app.kubernetes.io/name: argocd-yml-demo
        app.kubernetes.io/version: 0.0.1-SNAPSHOT
      name: argocd-yml-demo
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: traefik/whoami:latest
        imagePullPolicy: IfNotPresent
        name: traefik-argocd-yml-demo
        securityContext:
          privileged: false
