deployment/k8s/argocd-yml-demo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd-yml-demo
    provider: jkube
    version: 0.0.1-SNAPSHOT
    group: com.example
    app.kubernetes.io/part-of: com.example
    app.kubernetes.io/managed-by: jkube
    app.kubernetes.io/name: argocd-yml-demo
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  name: argocd-yml-demo
spec:
  ports:
  - name: http
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: argocd-yml-demo
    provider: jkube
    group: com.example
    app.kubernetes.io/name: argocd-yml-demo
    app.kubernetes.io/part-of: com.example
    app.kubernetes.io/managed-by: jkube
  type: NodePort
