deployment/k8s/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-yml-demo-ingress
  labels:
    app: argocd-yml-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /amir
        pathType: Prefix
        backend:
          service:
            name: argocd-yml-demo
            port:
              number: 80
